[build-system]
requires = [
	"flit_core >=3.8",
	"python_version >= '3.9'"
	]
build-backend = "flit_core.buildapi"
dynamic=["version"]

[project]
name = "regression"
authors = [{name = "Hannah Takasuka", email = "hannah.takasuka@ucsf.edu"}]
license = {file = "LICENSE"}
classifiers = ["License :: OSI Approved :: MIT License"]
dynamic = ["version", "description"]
dependencies = ["pytest", "numpy", "scipy", "matplotlib", "scikit-learn", "pandas"]

[project.urls]
Home = "https://github.com/hanmochturt/hw7-regression-takasuka"